# VeniVidi

./: .gitignore  CMakeLists.txt  build.sh  covReport.sh
app_src/: VeniVidi.cpp
include/: DataManager.hpp  DataTypes.hpp  FeaturePoint.hpp  FeaturePointExtractor.hpp  FeaturePointMatcher.hpp  ImageFeaturePoints.hpp  ImagePreprocessor.hpp  JobManager.hpp  MathModule.hpp  SceneGenerator.hpp  common.hpp  utils.hpp
lib_src/: DataManager.cpp  DataTypes.cpp  FeaturePointExtractor.cpp  FeaturePointMatcher.cpp  ImagePreprocessor.cpp  JobManager.cpp  MathModule.cpp  SceneGenerator.cpp  common.cpp  utils.cpp
src/: FeaturePointExtractor.cpp
test/: DataTypesTest.cpp  FeaturePointExtractorTest.cpp  FeaturePointMatcherTest.cpp  MathModuleTest.cpp  VVTestBase.cpp  VVTestBase.hpp  commonTest.cpp  utilsTest.cpp
